crates/typesec-core/tests/ui/cannot_impl_permission.stderr
error[E0277]: the trait bound `EvilPermission: permissions::sealed::Sealed` is not satisfied
 --> tests/ui/cannot_impl_permission.rs:5:21
  |
5 | impl Permission for EvilPermission {
  |                     ^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `permissions::sealed::Sealed` is not implemented for `EvilPermission`
 --> tests/ui/cannot_impl_permission.rs:3:1
  |
3 | struct EvilPermission;
  | ^^^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `permissions::sealed::Sealed`:
            AiCanExfiltrate
            AiCanInfer
            AiCanTrain
            CanDeclassify
            CanDelegate
            CanDelete
            CanExecute
            CanRead
          and $N others
note: required by a bound in `Permission`
 --> src/permissions.rs
  |
  | pub trait Permission: sealed::Sealed + Send + Sync + 'static {
  |                       ^^^^^^^^^^^^^^ required by this bound in `Permission`
  = note: `Permission` is a "sealed trait", because to implement it you also need to implement `typesec_core::permissions::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            typesec_core::CanRead
            typesec_core::CanWrite
            typesec_core::CanDelete
            typesec_core::CanExecute
            typesec_core::CanDelegate
            typesec_core::CanReadInternal
            typesec_core::CanReadSensitive
            typesec_core::CanWriteSensitive
          and $N others
